// Copyright 2021 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";
package enum2;

message Msg {
    optional Enum enum_optional = 1;
    repeated Enum enum_repeated = 2;
}

enum Enum {
    VALUE_SEVEN = 7;
    VALUE_ZERO = 0;
    VALUE_ONE = 1;
    VALUE_FOURTY_TWO = 42;
}
